--- a/2-1.BasicLogic.md
+++ b/2-1.BasicLogic.md
@@ -1,4 +1,4 @@
-# 深度学习基本逻辑
+# 深度学习基础
 
 在接下来的学习中我将以下图为模板，分析每一个深度学习模型的具体实现。
 
@@ -8,6 +8,6 @@
 
 ![basic_logic](pics/d2l_deep_learning_linear_regression.png)
 
-## 深度学习中数学基本约定
+## 深度学习中数学
 
 * 在深度学习中，向量默认为列向量
