Linear Regression Concise

--- a/3-1.LinearRegression.ipynb
+++ b/3-1.LinearRegression.ipynb
@@ -223,7 +223,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 16,
             "source": [
                 "from torch import nn\n",
                 "\n",
@@ -234,18 +234,27 @@
                 "\n",
                 "loss = nn.MSELoss()\n",
                 "\n",
-                "trainer = torch.optim.SGD(net.parameters(), lr=0.03)"
+                "trainer = torch.optim.SGD(net.parameters(), lr=0.03)\n",
+                "\n",
+                "num_epochs = 3\n",
+                "for epoch in range(num_epochs):\n",
+                "    for X, y in data_iter:\n",
+                "        l = loss(net(X) ,y)\n",
+                "        trainer.zero_grad()\n",
+                "        l.backward()\n",
+                "        trainer.step()\n",
+                "    l = loss(net(features), labels)\n",
+                "    print(f'epoch {epoch + 1}, loss {l:f}')"
             ],
             "outputs": [
                 {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "tensor([0.])"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 15
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "epoch 1, loss 0.000143\n",
+                        "epoch 2, loss 0.000109\n",
+                        "epoch 3, loss 0.000110\n"
+                    ]
                 }
             ],
             "metadata": {}
